--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.21.2",
     "react-modal": "^3.14.4",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
