--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@capacitor/cli": "^4.7.3"
   },
   "engines": {
-    "node": ">=14.20.1"
+    "node": ">=14.20.1",
+    "npm":"7.0.0"
   }
 }
